src/test/resources/regression/frontends/passing/ClassFields.scala
/* Copyright 2009-2016 EPFL, Lausanne */

import leon.lang._

object ClassFields {
  case class Foo(f : Option[Foo])
}

